2014-05-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_edit_modules.php: Improved to support
	each state changing of 'FF threshold'.

2014-05-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php,
	include/functions_networkmap.php: added the filters for the
	CIDR network masks.

2014-05-23  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manager.php: Added optional
	module pagination.

2014-05-23  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_forecast.php: Fixed division by zero.

	* operation/visual_console/public_console.php: Fixed link
	to public visual console.

2014-05-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix end of unknown
	periods in graphs when activate events storm protection
	or other prevent events triggering

2014-05-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/groups/group_list.php: Dont show void agents
	in report template wizard.

2014-05-22  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_visuals.php
	  include/functions_config.php
	  operation/agentes/estado_monitores.php: Added optional
	module pagination.

2014-05-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fix unknown graphs in graphs
	with only negative values. Now the unknown graph is always positive
	Ticket: #569 

2014-05-21  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/servers/manage_recontask.php
	  operation/servers/recon_view.php: Added tabs.

2014-05-21  Sergio Martin <sergio.martin@artica.es>

	* general/main_menu.php
	godmode/setup/setup_visuals.php
	include/styles/pandora.css
	include/functions_config.php: Added autohidden menu
	feature

2014-05-21  Vanessa Gil <vanessa.gil@artica.es>

	* images/dot_blue.png
	  images/dot_white.png
	  images/dot_yellow.png
	  operation/agentes/estado_monitores.php
	  operation/agentes/status_monitor.php: Changed images.


2014-05-21  Junichi Satoh  <junichi@rworks.jp>
