@@ -130,35 +130,45 @@ $table->data[3][3] .= '<br /><em>'.__('Inverse interval').'</em>';
 $table->data[3][3] .= html_print_checkbox ("critical_inverse", 1, $critical_inverse, true);
 
 $table->data[4][0] = __('FF threshold') . ' ' . ui_print_help_icon ('ff_threshold', true);
-$table->data[4][1] = html_print_input_text ('ff_event', $ff_event,
-	'', 5, 15, true);
-$table->data[4][2] = __('Historical data');
-$table->data[4][3] = html_print_checkbox ("history_data", 1, $history_data, true);
+$table->colspan[4][1] = 3;
+$table->data[4][1] = html_print_radio_button ('each_ff', 0, '', $each_ff, true) . ' ' . __('All state changing') . ' : ';
+$table->data[4][1] .= html_print_input_text ('ff_event', $ff_event,
+	'', 5, 15, true) . '<br />';
+$table->data[4][1] .= html_print_radio_button ('each_ff', 1, '', $each_ff, true) . ' ' . __('Each state changing') . ' : ';
+$table->data[4][1] .= __('To normal');
+$table->data[4][1] .= html_print_input_text ('ff_event_normal', $ff_event_normal, '', 5, 15, true, $disabledBecauseInPolicy) . ' ';
+$table->data[4][1] .= __('To warning');
+$table->data[4][1] .= html_print_input_text ('ff_event_warning', $ff_event_warning, '', 5, 15, true, $disabledBecauseInPolicy) . ' ';
+$table->data[4][1] .= __('To critical');
+$table->data[4][1] .= html_print_input_text ('ff_event_critical', $ff_event_critical, '', 5, 15, true, $disabledBecauseInPolicy);
 
-$table->data[5][0] = __('Min. Value');
-$table->data[5][1] = html_print_input_text ('min', $min, '', 5, 15, true). ' ' . ui_print_help_tip (__('Any value below this number is discarted'), true);
-$table->data[5][2] = __('Max. Value');
-$table->data[5][3] = html_print_input_text ('max', $max, '', 5, 15, true) . ' ' . ui_print_help_tip (__('Any value over this number is discarted'), true);
-$table->data[6][0] = __('Unit');
-$table->data[6][1] = html_print_input_text ('unit', $unit, '', 12, 25, true);
+$table->data[5][0] = __('Historical data');
+$table->data[5][1] = html_print_checkbox ("history_data", 1, $history_data, true);
 
-$table->data[6][2] = __('Throw unknown events');
-$table->data[6][3] = html_print_checkbox('throw_unknown_events', 1,
+$table->data[6][0] = __('Min. Value');
+$table->data[6][1] = html_print_input_text ('min', $min, '', 5, 15, true). ' ' . ui_print_help_tip (__('Any value below this number is discarted'), true);
+$table->data[6][2] = __('Max. Value');
+$table->data[6][3] = html_print_input_text ('max', $max, '', 5, 15, true) . ' ' . ui_print_help_tip (__('Any value over this number is discarted'), true);
+$table->data[7][0] = __('Unit');
+$table->data[7][1] = html_print_input_text ('unit', $unit, '', 12, 25, true);
+
+$table->data[7][2] = __('Throw unknown events');
+$table->data[7][3] = html_print_checkbox('throw_unknown_events', 1,
 	!network_components_is_disable_type_event($id, EVENTS_GOING_UNKNOWN), true);
 
-$table->data[7][0] = __('Critical instructions'). ui_print_help_tip(__("Instructions when the status is critical"), true);
-$table->data[7][1] = html_print_textarea ('critical_instructions', 2, 65, $critical_instructions, '', true);
-$table->colspan[7][1] = 3;
-
-$table->data[8][0] = __('Warning instructions'). ui_print_help_tip(__("Instructions when the status is warning"), true);
-$table->data[8][1] = html_print_textarea ('warning_instructions', 2, 65, $warning_instructions, '', true);
+$table->data[8][0] = __('Critical instructions'). ui_print_help_tip(__("Instructions when the status is critical"), true);
+$table->data[8][1] = html_print_textarea ('critical_instructions', 2, 65, $critical_instructions, '', true);
 $table->colspan[8][1] = 3;
 
-$table->data[9][0] = __('Unknown instructions'). ui_print_help_tip(__("Instructions when the status is unknown"), true);
-$table->data[9][1] = html_print_textarea ('unknown_instructions', 2, 65, $unknown_instructions, '', true);
+$table->data[9][0] = __('Warning instructions'). ui_print_help_tip(__("Instructions when the status is warning"), true);
+$table->data[9][1] = html_print_textarea ('warning_instructions', 2, 65, $warning_instructions, '', true);
 $table->colspan[9][1] = 3;
 
-$next_row = 10;
+$table->data[10][0] = __('Unknown instructions'). ui_print_help_tip(__("Instructions when the status is unknown"), true);
+$table->data[10][1] = html_print_textarea ('unknown_instructions', 2, 65, $unknown_instructions, '', true);
+$table->colspan[10][1] = 3;
+
+$next_row = 11;
 
 if (check_acl ($config['id_user'], 0, "PM")) {
 	$table->data[$next_row][0] = __('Category');
@@ -168,7 +178,7 @@ if (check_acl ($config['id_user'], 0, "PM")) {
 }
 else {
 	// Store in a hidden field if is not visible to avoid delete the value
-	$table->data[9][1] .= html_print_input_hidden ('id_category', $id_category, true);
+	$table->data[10][1] .= html_print_input_hidden ('id_category', $id_category, true);
 }
 
 $table->data[$next_row][0] =  __('Tags');
